--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@ There were low days when my motivation level went to negative, but Aman Sir alwa
             </div>
             <hr / style="width: 100%; height: 1px;">
             <div class="container copyrights">
-                <div>Copyright © 2024 <a href="https://github.com/whyshashi" target="_blank">shashi.</a> all rights reserved</div>
+                <div>Copyright © 2024 <a href="" target="_blank">shashi.</a> all rights reserved</div>
                 <!-- <img src="image/github.svg" alt="navigation icon" class="nav-hamburger" width="50" height="50" /> -->
             </div>
 
